--- a/FirstExample.html
+++ b/FirstExample.html
@@ -8,7 +8,7 @@
 <div>
 <form>
 
-<h3>Get Details</h3>
+<h3>Get Detail</h3>
 
 <button type="button" onclick="showDetails()">Show Details</button>
 <p id="issueType"></p>
