--- a/FirstExample.html
+++ b/FirstExample.html
@@ -10,7 +10,7 @@
 
 <h3>Get Detail</h3>
 
-<button type="button" onclick="showDetails()">Show Details</button>
+<button type="button" onclick="showDetail()">Show Detail</button>
 <p id="issueType"></p>
 
 </form>
